[gd_scene load_steps=18 format=3 uid="uid://dsgrw1grwef4m"]

[ext_resource type="Script" path="res://core/ui/card_ui/settings/general_settings_menu.gd" id="1_if7xt"]
[ext_resource type="PackedScene" uid="uid://bnhxravpuheh2" path="res://core/systems/updater/software_updater.tscn" id="2_ogwq4"]
[ext_resource type="PackedScene" uid="uid://8m20p2s0v5gb" path="res://core/systems/input/focus_group.tscn" id="3_36sdt"]
[ext_resource type="Resource" uid="uid://dgi16frh3mgj8" path="res://core/ui/card_ui/settings/settings_menu_focus.tres" id="4_fyrmg"]
[ext_resource type="PackedScene" uid="uid://dithv38oqgy58" path="res://core/ui/components/section_label.tscn" id="5_caxj0"]
[ext_resource type="PackedScene" uid="uid://d1qb7euwlu7bh" path="res://core/ui/components/toggle.tscn" id="6_ghdw1"]
[ext_resource type="PackedScene" uid="uid://c71ayw7pcw6u6" path="res://core/ui/components/card_button.tscn" id="7_qenel"]
[ext_resource type="PackedScene" uid="uid://d0u3rsa5qpj57" path="res://core/ui/components/subsection_label.tscn" id="8_2m3jw"]
[ext_resource type="PackedScene" uid="uid://xei5afwefxud" path="res://core/ui/components/dropdown.tscn" id="8_r15pa"]
[ext_resource type="Texture2D" uid="uid://ckbrrln8fngno" path="res://assets/images/platform/ayaneoair-ctr_v1a_1172023.png" id="9_00g0t"]
[ext_resource type="PackedScene" uid="uid://c6dpw6swmcbw6" path="res://core/systems/user_interface/theme_setter.tscn" id="9_bci6g"]
[ext_resource type="PackedScene" uid="uid://cmjjyqx1pl23d" path="res://core/ui/components/text.tscn" id="9_sq2rc"]
[ext_resource type="PackedScene" uid="uid://b0cyl6fdqxevn" path="res://core/systems/input/scroller_joystick.tscn" id="10_06mt3"]
[ext_resource type="Theme" uid="uid://ehplgpp70vxa" path="res://assets/themes/card_ui-dracula.tres" id="10_b386h"]
[ext_resource type="Theme" uid="uid://ddqvfbno2i1n4" path="res://assets/themes/card_ui-darksoul.tres" id="12_m1lrx"]
[ext_resource type="Theme" uid="uid://de64j20kxm1k1" path="res://assets/themes/card_ui-water-vapor.tres" id="13_2j54j"]
[ext_resource type="Theme" uid="uid://cw7auu2ayqnp8" path="res://assets/themes/card_ui-mountain.tres" id="14_wt0wj"]

[node name="GeneralSettings" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0
script = ExtResource("1_if7xt")

[node name="SoftwareUpdater" parent="." instance=ExtResource("2_ogwq4")]

[node name="UpdateTimer" type="Timer" parent="."]
wait_time = 120.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FocusGroup" parent="MarginContainer/VBoxContainer/VBoxContainer" node_paths=PackedStringArray("current_focus", "focus_neighbor_bottom", "focus_neighbor_top") instance=ExtResource("3_36sdt")]
current_focus = NodePath("../AutoUpdateToggle")
focus_stack = ExtResource("4_fyrmg")
focus_neighbor_bottom = NodePath("../../ThemeButtonContainer/FocusGroup")
focus_neighbor_top = NodePath("../../VBoxContainer3/FocusGroup")

[node name="UpdatesLabel" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("5_caxj0")]
layout_mode = 2
text = "Updates"

[node name="AutoUpdateToggle" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("6_ghdw1")]
unique_name_in_owner = true
layout_mode = 2
text = "Automatic Updates"
separator_visible = false
description = "Automatically download and apply updates in the background when they are available"

[node name="CheckUpdateButton" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("7_qenel")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Check for Updates"
uppercase = false

[node name="UpdateButton" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("7_qenel")]
unique_name_in_owner = true
custom_minimum_size = Vector2(158, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Install Update"
uppercase = false

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Appearance" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("5_caxj0")]
layout_mode = 2
text = "Appearance"

[node name="LanguageDropdown" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("8_r15pa")]
unique_name_in_owner = true
layout_mode = 2
title = "Language"
description = "System language"

[node name="ThemeLabel" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("8_2m3jw")]
layout_mode = 2
text = "Theme"

[node name="ThemeButtonContainer" type="HFlowContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="FocusGroup" parent="MarginContainer/VBoxContainer/ThemeButtonContainer" node_paths=PackedStringArray("current_focus", "focus_neighbor_bottom", "focus_neighbor_top") instance=ExtResource("3_36sdt")]
current_focus = NodePath("../ThemeDraculaButton")
focus_stack = ExtResource("4_fyrmg")
focus_neighbor_bottom = NodePath("../../VBoxContainer3/FocusGroup")
focus_neighbor_top = NodePath("../../VBoxContainer/FocusGroup")

[node name="ThemeDraculaButton" parent="MarginContainer/VBoxContainer/ThemeButtonContainer" instance=ExtResource("7_qenel")]
custom_minimum_size = Vector2(158, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Dracula"

[node name="ThemeSetter" parent="MarginContainer/VBoxContainer/ThemeButtonContainer/ThemeDraculaButton" instance=ExtResource("9_bci6g")]
theme = ExtResource("10_b386h")
on_signal = "button_up"

[node name="ThemeDarkSoulButton" parent="MarginContainer/VBoxContainer/ThemeButtonContainer" instance=ExtResource("7_qenel")]
custom_minimum_size = Vector2(158, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Dark Soul"

[node name="ThemeSetter" parent="MarginContainer/VBoxContainer/ThemeButtonContainer/ThemeDarkSoulButton" instance=ExtResource("9_bci6g")]
theme = ExtResource("12_m1lrx")
on_signal = "button_up"

[node name="ThemeWaterVapor" parent="MarginContainer/VBoxContainer/ThemeButtonContainer" instance=ExtResource("7_qenel")]
custom_minimum_size = Vector2(158, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Water Vapor"

[node name="ThemeSetter" parent="MarginContainer/VBoxContainer/ThemeButtonContainer/ThemeWaterVapor" instance=ExtResource("9_bci6g")]
theme = ExtResource("13_2j54j")
on_signal = "button_up"

[node name="ThemeMountain" parent="MarginContainer/VBoxContainer/ThemeButtonContainer" instance=ExtResource("7_qenel")]
custom_minimum_size = Vector2(158, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Mountain"

[node name="ThemeSetter" parent="MarginContainer/VBoxContainer/ThemeButtonContainer/ThemeMountain" instance=ExtResource("9_bci6g")]
theme = ExtResource("14_wt0wj")
on_signal = "button_up"

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FocusGroup" parent="MarginContainer/VBoxContainer/VBoxContainer3" node_paths=PackedStringArray("current_focus", "focus_neighbor_bottom", "focus_neighbor_top") instance=ExtResource("3_36sdt")]
current_focus = NodePath("../ClientVersionText")
focus_stack = ExtResource("4_fyrmg")
focus_neighbor_bottom = NodePath("../../VBoxContainer/FocusGroup")
focus_neighbor_top = NodePath("../../ThemeButtonContainer/FocusGroup")

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="SystemLabel" parent="MarginContainer/VBoxContainer/VBoxContainer3" instance=ExtResource("5_caxj0")]
layout_mode = 2
text = "System Information"

[node name="PlatformContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlatformImage" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer3/PlatformContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(426, 266)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("9_00g0t")
expand_mode = 1
stretch_mode = 5

[node name="PlatformNameLabel" parent="MarginContainer/VBoxContainer/VBoxContainer3/PlatformContainer" instance=ExtResource("5_caxj0")]
unique_name_in_owner = true
layout_mode = 2
text = "Platform"
vertical_alignment = 1

[node name="ClientVersionText" parent="MarginContainer/VBoxContainer/VBoxContainer3" instance=ExtResource("9_sq2rc")]
unique_name_in_owner = true
layout_mode = 2
title = "Client Version"
description = ""
text = "v0.0.0"

[node name="OSText" parent="MarginContainer/VBoxContainer/VBoxContainer3" instance=ExtResource("9_sq2rc")]
unique_name_in_owner = true
layout_mode = 2
title = "OS"
description = ""
text = "Generic"

[node name="KernelVerText" parent="MarginContainer/VBoxContainer/VBoxContainer3" instance=ExtResource("9_sq2rc")]
unique_name_in_owner = true
layout_mode = 2
title = "Kernel Version"
description = ""
text = "Generic"

[node name="VendorText" parent="MarginContainer/VBoxContainer/VBoxContainer3" instance=ExtResource("9_sq2rc")]
unique_name_in_owner = true
layout_mode = 2
title = "Vendor"
description = ""
text = "Generic"

[node name="ProductText" parent="MarginContainer/VBoxContainer/VBoxContainer3" instance=ExtResource("9_sq2rc")]
unique_name_in_owner = true
layout_mode = 2
title = "Product"
description = ""
text = "Generic"

[node name="BIOSVerText" parent="MarginContainer/VBoxContainer/VBoxContainer3" instance=ExtResource("9_sq2rc")]
unique_name_in_owner = true
layout_mode = 2
title = "BIOS Version"
description = ""
text = "Generic"

[node name="CPUModelText" parent="MarginContainer/VBoxContainer/VBoxContainer3" instance=ExtResource("9_sq2rc")]
unique_name_in_owner = true
layout_mode = 2
title = "CPU Model"
description = ""
text = "Generic"

[node name="GPUModelText" parent="MarginContainer/VBoxContainer/VBoxContainer3" instance=ExtResource("9_sq2rc")]
unique_name_in_owner = true
layout_mode = 2
title = "GPU Model"
description = ""
text = "Generic"

[node name="GPUDriverText" parent="MarginContainer/VBoxContainer/VBoxContainer3" instance=ExtResource("9_sq2rc")]
unique_name_in_owner = true
layout_mode = 2
title = "Driver Version"
description = ""
text = "Generic"

[node name="ScrollerJoystick" parent="." instance=ExtResource("10_06mt3")]
